Bug 507626 - Date disappears after online price update in list
Summary: Date disappears after online price update in list
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-29 09:00 UTC by Thomas Baumgart
Modified: 2025-07-29 12:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2025-07-29 09:00:55 UTC
SUMMARY

The value in the date column disappears after an online price update

STEPS TO REPRODUCE
1. Open online price update dialog
2. Select one entry
3. Press "Update selected"

OBSERVED RESULT

Price is updated, date column is empty

EXPECTED RESULT

Date column shows date of price update

ADDITIONAL INFORMATION

If dialog is closed and re-opened the date is presented correctly. Using the "Update all" button behaves the same way.
Comment 1 Thomas Baumgart 2025-07-29 09:12:36 UTC
Git commit bfbeff83a86bd5fa490e0cb0e7adf0eb06afcc61 by Thomas Baumgart.
Committed on 29/07/2025 at 09:11.
Pushed by tbaumgart into branch 'master'.

Show date after online price update in date column
FIXED-IN: 5.2.1

M  +1    -1    kmymoney/dialogs/kequitypriceupdatedlg.cpp

https://invent.kde.org/office/kmymoney/-/commit/bfbeff83a86bd5fa490e0cb0e7adf0eb06afcc61
Comment 2 Thomas Baumgart 2025-07-29 12:42:02 UTC
Git commit cf01f04deea2349e75a794ee030eb18d3c928ee9 by Thomas Baumgart.
Committed on 29/07/2025 at 09:13.
Pushed by tbaumgart into branch '5.2'.

Show date after online price update in date column
FIXED-IN: 5.2.1
(cherry picked from commit bfbeff83a86bd5fa490e0cb0e7adf0eb06afcc61)

M  +1    -1    kmymoney/dialogs/kequitypriceupdatedlg.cpp

https://invent.kde.org/office/kmymoney/-/commit/cf01f04deea2349e75a794ee030eb18d3c928ee9