Show date after online price update in date column

BUG: 507626
FIXED-IN: 5.2.1
(cherry picked from commit bfbeff83a86bd5fa490e0cb0e7adf0eb06afcc61)